2002-03-26  Seth Nickell  <snickell@stanford.edu>

	* keybinding.desktop.in:

	Use "keyboard shortcuts" to match the window title